--- a/web/src/app/team/team-home/team-home.component.html
+++ b/web/src/app/team/team-home/team-home.component.html
@@ -1,1 +1,4 @@
-<p>team-home works!</p>
+<div>
+  <button routerLink="/admin/teams/create">Új csapat</button>
+  <app-team-list [teams]="teams"></app-team-list>
+</div>
