--- a/web/src/app/team/team-list-item/team-list-item.component.html
+++ b/web/src/app/team/team-list-item/team-list-item.component.html
@@ -1,1 +1,5 @@
-<p>team-list-item works!</p>
+<div>
+  <span>{{team.teamName}}</span>
+  <button routerLink="{{team.teamId}}">Szerkesztés</button>
+  <button (click)="onTeamDelete()">Törlés</button>
+</div>
