--- a/web/src/app/match/match-home/match-home.component.html
+++ b/web/src/app/match/match-home/match-home.component.html
@@ -1,1 +1,4 @@
-<p>match-home works!</p>
+<div>
+  <button routerLink="/admin/matches/create">Új Mérkőzés</button>
+  <app-match-list [matches]="matches"></app-match-list>
+</div>
