--- a/web/src/app/match/match-list-item/match-list-item.component.html
+++ b/web/src/app/match/match-list-item/match-list-item.component.html
@@ -1,1 +1,9 @@
-<p>match-list-item works!</p>
+<div>
+  <span>{{match.homeTeam.teamName}}</span>
+  <span>{{match.awayTeam.teamName}}</span>
+  <span>{{match.tournament.tournamentName}}</span>
+  <span>{{match.group}}</span>
+  <span>{{match.startTime}}</span>
+  <button routerLink="{{match.matchId}}">Szerkesztés</button>
+  <button (click)="onMatchDelete()">Törlés</button>
+</div>
