--- a/web/src/app/auth/login/login.component.html
+++ b/web/src/app/auth/login/login.component.html
@@ -1,23 +1,29 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div>
-    <label>
-      Email cím
-      <input placeholder="Email cím" type="email" formControlName="email">
-    </label>
-    <ng-container *ngIf="form.controls.email.touched">
-      <span *ngIf="form.controls.email.errors?.required">Kötelező</span>
-      <span *ngIf="form.controls.email.errors?.email">Nem email</span>
-    </ng-container>
-  </div>
-  <div>
-    <label>
-      Jelszó
-      <input placeholder="Jelszó" type="password" formControlName="password">
-    </label>
-    <ng-container *ngIf="form.controls.password.touched">
-      <span *ngIf="form.controls.password.errors?.required">Kötelező</span>
-      <span *ngIf="form.controls.password.errors?.minlength">Túl rövid</span>
-    </ng-container>
-  </div>
-  <button [disabled]="form.invalid" type="submit">Bejelentkezés</button>
-</form>
+<div class="login-panel">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="email">
+        Email cím
+      </label>
+      <input placeholder="Email cím" type="email" formControlName="email" id="email" class="form-control"
+        [ngClass]="{'is-invalid' : form.controls.email.touched && form.controls.email.invalid}">
+      <ng-container *ngIf="form.controls.email.touched">
+        <span class="invalid-feedback" *ngIf="form.controls.email.errors?.required">Email megadása kötelező</span>
+        <span class="invalid-feedback" *ngIf="form.controls.email.errors?.email">Helytelen formátum</span>
+      </ng-container>
+    </div>
+    <div class="form-group">
+      <label for="password">
+        Jelszó
+      </label>
+      <input placeholder="Jelszó" type="password" formControlName="password" id="password"
+        class="form-control"
+        [ngClass]="{'is-invalid' : form.controls.password.touched && form.controls.password.invalid}">
+      <ng-container *ngIf="form.controls.password.touched">
+        <span class="invalid-feedback" *ngIf="form.controls.password.errors?.required">Jelszó megadása kötelező</span>
+        <span class="invalid-feedback" *ngIf="form.controls.password.errors?.minlength">Minimum 6 karakter hosszú jelszó szükséges</span>
+      </ng-container>
+    </div>
+    <button [disabled]="form.invalid" type="submit" class="btn btn-primary">Bejelentkezés</button>
+  </form>
+  <button class="btn btn-link login-panel__registration" [routerLink]="['/registration']">Regisztráció</button>
+</div>
