--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -12,6 +12,7 @@
 
   body {
     color: #2E2E2E;
+    background-color: #1b9eb2!important;
     margin: 0;
   }
 
@@ -22,5 +23,3 @@
     padding: 0;
   }
 
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
