--- a/web/src/app/betting/betting-match-list-day-item/betting-match-list-day-item.component.scss
+++ b/web/src/app/betting/betting-match-list-day-item/betting-match-list-day-item.component.scss
@@ -1,6 +1,7 @@
 .betting-match-list__date {
   font-size: 20px;
-  color: #3c3c3c;
+  color: #ffffff;
   font-family: "PFBeauSansPro-SemiBold";
-  margin: 20px 5px 0px;
+  margin: 20px 0 0;
+  padding: 0 5px;
 }
