--- a/web/src/app/betting/betting-match-list-match-item/betting-match-list-match-item.component.scss
+++ b/web/src/app/betting/betting-match-list-match-item/betting-match-list-match-item.component.scss
@@ -1,115 +1,150 @@
-.betting-match-list-item-row{
-  padding: 5px 10px;
-}
+.betting-match-list {
+  &__match {
+    display: grid;
+    font-family: "PFBeauSansPro-Regular";
+    padding: 5px 10px;
+    background-color: white;
+  }
 
-.betting-match-list__match {
-  display: grid;
-  font-family: "PFBeauSansPro-Regular";
-  padding-top: 5px;
-  border-top: 1px solid #b8c3c9;
-}
-
-.betting-match-list-item__location {
-  grid-area: location;
-}
-
-.betting-match-list-item__group {
-  grid-area: group;
-  justify-self: end;
-}
-
-.betting-match-list-item__home-flag, .betting-match-list-item__away-flag {
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-  overflow: hidden;
-  text-align: center;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #b8c3c9;
-  align-self: center;
-  justify-self: center;
-}
-
-.betting-match-list-item__home-flag span,
-.betting-match-list-item__away-flag span{
-  display: block;
-  width: 195px;
-  height: 100%;
-  margin-left: -80px;
-}
-
-.betting-match-list-item__home-flag img,
-.betting-match-list-item__away-flag img {
-  height: 100%;
-  display: inline-block;
-}
-
-.betting-match-list-item__home-flag {
-  grid-area: home-flag;
-}
-
-.betting-match-list-item__away-flag {
-  grid-area: away-flag;
-}
-
-.betting-match-list-item__home-name {
-  grid-area: home-name;
-  align-self: center;
-}
-
-.betting-match-list-item__away-name {
-  grid-area: away-name;
-  align-self: center;
-}
-
-.betting-match-list-item__time {
-  grid-area: time;
-  align-self: center;
-}
-
-.betting-match-list-item__indicator {
-  text-align: center;
-}
-
-@media (max-width: 425px) {
-  .betting-match-list__match {
+  @media (max-width: 425px) {
+    &__match {
       grid-template-columns: 40px auto auto;
       grid-template-rows: auto 40px 40px;
       grid-template-areas:
-      "location location location group"
-      "home-flag home-name home-name time"
-      "away-flag away-name away-name time";
+        "location location location group"
+        "home-flag home-name home-name time"
+        "away-flag away-name away-name time";
+    }
   }
 
-  .betting-match-list-item__home-name, .betting-match-list-item__away-name {
-      margin-left: 10px;
+  @media (min-width: 426px) {
+    &__match {
+      grid-template-columns: 1fr 40px 60px 40px 1fr;
+      grid-template-rows: auto 40px;
+      grid-template-areas:
+        "location location countdown group group"
+        "home-name home-flag time away-flag away-name";
+    }
   }
 
-  .betting-match-list-item__time {
+  &-item {
+    &-row {
+      margin: 10px 0;
+    }
+
+    &__location {
+      grid-area: location;
+    }
+
+    &__group {
+      grid-area: group;
       justify-self: end;
+    }
+
+    &__home-flag,
+    &__away-flag {
+      height: 35px;
+      width: 35px;
+      border-radius: 50%;
+      overflow: hidden;
+      text-align: center;
+      border-style: solid;
+      border-width: 1px;
+      border-color: #b8c3c9;
+      align-self: center;
+      justify-self: center;
+    }
+
+    &__home-flag span,
+    &__away-flag span {
+      display: block;
+      width: 195px;
+      height: 100%;
+      margin-left: -80px;
+    }
+
+    &__home-flag img,
+    &__away-flag img {
+      height: 100%;
+      display: inline-block;
+    }
+
+    &__home-flag {
+      grid-area: home-flag;
+    }
+
+    &__away-flag {
+      grid-area: away-flag;
+    }
+
+    &__home-name {
+      grid-area: home-name;
+      align-self: center;
+    }
+
+    &__away-name {
+      grid-area: away-name;
+      align-self: center;
+    }
+
+    &__score-time {
+      grid-area: time;
+      align-self: center;
+      text-align: center;
+    }
+
+    &__indicator {
+      text-align: center;
+      background-color: white;
+    }
+
+    &__expandable {
+      background-color: white;
+      padding: 10px;
+      display: grid;
+      grid-template-columns: 100px auto;
+      column-gap: 10px;
+      grid-template-areas: "bet-panel bet-list";
+    }
+
+    &__spinner {
+      grid-column: 1 / 3;
+      text-align: center;
+    }
+
+    @media (max-width: 425px) {
+      &__home-name,
+      &__away-name {
+        margin-left: 10px;
+      }
+
+      &__time {
+        justify-self: end;
+      }
+    }
+
+    @media (min-width: 426px) {
+      &__time {
+        justify-self: center;
+      }
+
+      &__away-name {
+        margin-left: 10px;
+      }
+
+      &__home-name {
+        justify-self: end;
+        margin-right: 10px;
+      }
+    }
   }
 }
 
-@media (min-width: 426px) {
-  .betting-match-list__match {
-      grid-template-columns: 1fr 40px 60px  40px 1fr;
-      grid-template-rows: auto 40px;
-      grid-template-areas:
-      "location location countdown group group"
-      "home-name home-flag time away-flag away-name";
-  }
+app-betting-match-bet-panel,
+app-betting-match-own-bet {
+  grid-area: bet-panel;
+}
 
-  .betting-match-list-item__time {
-      justify-self: center;
-  }
-
-  .betting-match-list-item__away-name {
-      margin-left: 10px;
-  }
-
-  .betting-match-list-item__home-name {
-      justify-self: end;
-      margin-right: 10px;
-  }
+app-betting-match-bet-list {
+  grid-area: bet-list;
 }
