--- a/web/src/app/nav-bar/nav-bar.component.html
+++ b/web/src/app/nav-bar/nav-bar.component.html
@@ -1,10 +1,19 @@
 <nav>
-  <div class="nav">
-    <div class="nav-item">
-      Tippelés
-    </div>
-    <div class="nav-item">
-      Ranglista
-    </div>
-  </div>
+  <ul class="nav justify-content-center" *ngIf="isLoggedIn">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/">
+        Tippelés
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/standings">
+        Ranglista
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" (click)="onLogout()">
+        Kijelentkezés
+      </a>
+    </li>
+  </ul>
 </nav>
