--- a/web/src/app/nav-bar/nav-bar.component.scss
+++ b/web/src/app/nav-bar/nav-bar.component.scss
@@ -1,5 +1,4 @@
 nav {
-  height: 50px;
   background-color: #eeeeee;
   position: fixed;
   top: 0;
@@ -10,4 +9,8 @@ nav {
 .nav {
   max-width: 768px;
   margin: 0 auto;
+
+  a {
+    cursor: pointer;
+  }
 }
