--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -14,6 +14,7 @@ body {
   color: #2e2e2e;
   background-color: #1b9eb2 !important;
   margin: 0;
+  font-family: "PFBeauSansPro-Regular" !important;
 }
 
 ul,
