--- a/web/src/app/betting/betting-match-bet-list/betting-match-bet-list.component.html
+++ b/web/src/app/betting/betting-match-bet-list/betting-match-bet-list.component.html
@@ -1,5 +1,5 @@
 <div class="betting-match-list-item__bet-list">
-  <div class="betting-match-list-item__bet-item" *ngFor="let b of bets" [ngClass]="b.point | betResultToCssClass">
+  <div class="betting-match-list-item__bet-item" *ngFor="let b of bets" [ngClass]="b.result | betResultToCssClass">
     <div class="betting-match-list-item__bet-item-name">
       {{b.userName}}
     </div>
