--- a/web/src/app/betting/betting-match-list-match-item/betting-match-list-match-item.component.scss
+++ b/web/src/app/betting/betting-match-list-match-item/betting-match-list-match-item.component.scss
@@ -89,7 +89,7 @@
     &__score-time {
       grid-area: time;
       align-self: center;
-      text-align: center;
+      justify-self: center;
     }
 
     &__indicator {
