--- a/web/src/app/betting/standings-list-item/standings-list-item.component.scss
+++ b/web/src/app/betting/standings-list-item/standings-list-item.component.scss
@@ -27,3 +27,12 @@ a {
     text-align: right;
   }
 }
+@media (max-width: 425px) {
+  .standings-list-item {
+    grid-template-columns: 20px auto 35px 35px 35px 50px;
+
+    div {
+      padding: 5px 0;
+    }
+  }
+}
