--- a/web/src/app/betting/betting-match-list-match-item/betting-match-list-match-item.component.html
+++ b/web/src/app/betting/betting-match-list-match-item/betting-match-list-match-item.component.html
@@ -1,6 +1,6 @@
 <div class="betting-match-list-item-row">
   <div class="betting-match-list__match" (click)="toggleExpand()">
-    <div class="betting-match-list-item__location">Róma</div>
+    <div class="betting-match-list-item__location">{{match.city}}</div>
     <div class="betting-match-list-item__group">{{match.group}}</div>
     <div class="betting-match-list-item__home-flag">
       <span>
