--- a/web/src/app/match/match-form/match-form.component.html
+++ b/web/src/app/match/match-form/match-form.component.html
@@ -42,6 +42,15 @@
     </ng-container>
   </div>
   <div class="form-group">
+    <label for="city">
+      Város
+      <input type="text" class="form-control" formControlName="city" id="city">
+    </label>
+    <ng-container *ngIf="form.controls.city.touched">
+      <span *ngIf="form.controls.city.errors?.required">Kötelező</span>
+    </ng-container>
+  </div>
+  <div class="form-group">
     <label>
       Dátum
       <div class="input-group">
