Set default tournament

--- a/web/src/app/tournament/tournament-list-item/tournament-list-item.component.html
+++ b/web/src/app/tournament/tournament-list-item/tournament-list-item.component.html
@@ -2,4 +2,5 @@
   <span>{{tournament.tournamentName}}</span>
   <button routerLink="{{tournament.tournamentId}}">Szerkesztés</button>
   <button (click)="onTournamentDelete()">Törlés</button>
+  <button (click)="onSetDefaultTournament()">Alapértelmezett</button>
 </div>
