--- a/web/src/app/match/match-form/match-form.component.html
+++ b/web/src/app/match/match-form/match-form.component.html
@@ -65,5 +65,11 @@
       <ngb-timepicker formControlName="startTime"></ngb-timepicker>
     </label>
   </div>
+  <div class="form-group">
+    <label for="hasExtraTime">
+      Hosszabbítás lehetséges?
+      <input type="checkbox" class="form-control" formControlName="hasExtraTime" id="hasExtraTime">
+    </label>
+  </div>
   <button type="submit">Mentés</button>
 </form>
