--- a/web/src/app/auth/confirm-forgot-password/confirm-forgot-password.component.html
+++ b/web/src/app/auth/confirm-forgot-password/confirm-forgot-password.component.html
@@ -1,10 +1,11 @@
 <div class="login-panel">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="email">
+      <label for="cfp_email">
         Email cím
       </label>
-      <input placeholder="Email cím" type="email" formControlName="email" id="email" class="form-control"
+      <input placeholder="Email cím" type="email" formControlName="email" id="cfp_email" class="form-control"
+        autocomplete="new-email"
         [ngClass]="{'is-invalid' : form.controls.email.touched && form.controls.email.invalid}">
       <ng-container *ngIf="form.controls.email.touched">
         <span class="invalid-feedback" *ngIf="form.controls.email.errors?.required">Email megadása kötelező</span>
@@ -12,10 +13,18 @@
       </ng-container>
     </div>
     <div class="form-group">
+      <label for="confirmationCode">
+        Megerősítő kód
+      </label>
+      <input placeholder="Megerősítő kód" type="number" formControlName="confirmationCode" id="confirmationCode"
+        class="form-control" disabled="true">
+    </div>
+    <div class="form-group">
       <label for="password">
         Jelszó
       </label>
-      <input placeholder="Jelszó" type="password" formControlName="password" id="password" class="form-control"
+      <input placeholder="Új jelszó" type="password" formControlName="password" id="password" class="form-control"
+        autocomplete="new-password"
         [ngClass]="{'is-invalid' : form.controls.password.touched && form.controls.password.invalid}">
       <ng-container *ngIf="form.controls.password.touched">
         <span class="invalid-feedback" *ngIf="form.controls.password.errors?.required">Jelszó megadása kötelező</span>
@@ -29,6 +38,6 @@
       Bejelentkezés...
     </button>
   </form>
+  <button class="btn btn-link login-panel__registration" [routerLink]="['/login']">Bejelentkezés</button>
   <button class="btn btn-link login-panel__registration" [routerLink]="['/registration']">Regisztráció</button>
-  <button class="btn btn-link login-panel__registration" [routerLink]="['/forgot-password']">Elfelejtett jelszó</button>
 </div>
