Button label fix

--- a/web/src/app/auth/confirm-forgot-password/confirm-forgot-password.component.html
+++ b/web/src/app/auth/confirm-forgot-password/confirm-forgot-password.component.html
@@ -32,10 +32,10 @@
           szükséges</span>
       </ng-container>
     </div>
-    <button [disabled]="form.invalid" type="submit" class="btn btn-primary" *ngIf="!isInProgress">Bejelentkezés</button>
+    <button [disabled]="form.invalid" type="submit" class="btn btn-primary" *ngIf="!isInProgress">Küldés</button>
     <button class="btn btn-primary" type="button" disabled *ngIf="isInProgress">
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-      Bejelentkezés...
+      Küldés...
     </button>
   </form>
   <button class="btn btn-link login-panel__registration" [routerLink]="['/login']">Bejelentkezés</button>
