--- a/web/src/app/auth/forgot-password/forgot-password.component.html
+++ b/web/src/app/auth/forgot-password/forgot-password.component.html
@@ -14,7 +14,7 @@
     <button [disabled]="form.invalid" type="submit" class="btn btn-primary" *ngIf="!isInProgress">Küldés</button>
     <button class="btn btn-primary" type="button" disabled *ngIf="isInProgress">
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-      Bejelentkezés...
+      Küldés...
     </button>
   </form>
   <button class="btn btn-link login-panel__registration" [routerLink]="['/login']">Bejelentkezés</button>
